app/components/paperShow/paperShow.scss
@import "../../variables";

:export {
  navbarHeight: $navbar_height;
  paperShowSubNavbarHeight: $paper-show-sub-navbar-height;
}

%navbar-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 176px;
  height: 40px;
  border-radius: 5px;
  margin-right: 8px;
}

.paperShowWrapper {
  margin-top: $navbar_height;
}

.container {
  @extend %container;
}

.navContainer {
  @extend %container;
  position: relative;

  .navRightBox {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    display: flex;
    align-items: center;
  }

  .bookmarkButtonBox {
    @extend %navbar-button;
    margin-right: 0;
    color: white;
    background-color: $royal_blue1;
    cursor: pointer;
  }

  .citationButton {
    @extend %navbar-button;
    text-align: center;
    width: 136px;
    cursor: pointer;
    font-size: 14px;
    font-weight: bold;
    color: $royal_blue4;

    &:hover {
      background-color: $space_gray4;
    }
  }

  .pdfOrSourceButtonWrapper {
    @extend %navbar-button;
    border: solid 1px $sky_blue2;
    background-color: transparent;
    text-align: center;
    font-size: 14px;
    font-weight: bold;
    color: $royal_blue4;

    &:hover {
      background-color: rgba(96, 150, 255, 0.1);
    }
  }

  .sourceIcon {
    display: inline-block;
    vertical-align: top;
    width: 16px;
    height: 14.3px;
    margin-right: 8px;

    svg {
      display: inline-block;
      vertical-align: top;
      width: 100%;
      height: 100%;
    }
  }
}

.referencesTitle {
  margin-top: 46px;
  margin-bottom: 85px;
}

.innerContainer {
  display: flex;
}

%navigationBox {
  background-color: $space_gray5;
  border: solid 1px $space_gray16;
  height: $paper-show-sub-navbar-height;
}

.navigationBoxWrapper {
  @extend %navigationBox;
  border: 0;
  background-color: transparent;
}

.normalNavigationBox {
  @extend %navigationBox;
}

.fixedNavigationBox {
  @extend %navigationBox;
  position: fixed;
  top: $navbar_height;
  left: 0;
  right: 0;
  z-index: 1399;
}

.navigatorItem {
  display: inline-block;
  vertical-align: top;
  height: $paper-show-sub-navbar-height - 1px;
  line-height: $paper-show-sub-navbar-height;
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  color: $space_gray18;
  margin-right: 16px;
  cursor: pointer;

  &:last-of-type {
    margin-right: 0;
  }

  &.activeItem {
    color: $royal_blue4;
    font-weight: bold;
    border-bottom: solid 3px $royal_blue4;
  }
}

.journalLink {
  text-decoration: underline;

  &:hover {
    text-decoration: underline;
  }
}

.headSection {
  background-color: #f9f9fa;
  padding-bottom: 17.5px;
}

.informationSubtitle {
  font-weight: bold;
}

.leftBox {
  display: inline-block;
  vertical-align: top;
  padding-top: 20px;
  flex: 1;
}

.title {
  font-size: 26px;
  font-weight: 500;
  line-height: 1.42;
  text-align: left;
  margin: 8px 0 11px 0;
  color: $dark_navy1;
}

.journalInformation {
  font-size: 14px;
  margin-bottom: 11px;
  line-height: 1.6;
  color: $space_gray10;
}

.abstractBox {
  margin-top: 36.5px;
}

.abstractTitle {
  height: 21px;
  font-size: 18px;
  font-weight: 500;
  color: $black_navy1;
  margin-bottom: 12.5px;
}

.abstractContent {
  font-size: 14px;
  line-height: 1.5;
  color: $dark_navy2;
}

.contentLeftBox {
  flex: 1;
}

.rightBox {
  display: inline-block;
  vertical-align: top;
  width: $right-container-width;
  padding-top: 28px;
  margin-left: 21.5px;
}

.relatedTitle {
  font-size: 18px;
  font-weight: 500;
  color: $black_navy1;
  padding-bottom: 15px;
  margin-bottom: 8px;
  border-bottom: 1px solid $space_gray1;

  span {
    display: inline-block;
    vertical-align: top;
  }
}

.relatedCount {
  margin-left: 12px;
  font-size: 18px;
  font-weight: 500;
  color: $space_gray19;
}

.DOIButton {
  font-size: 14px;
  line-height: 2.08;
  letter-spacing: 0.4px;
  color: $space_gray10;
  background-color: transparent;
  cursor: pointer;
  margin-bottom: 14.5px;
}

.authorListBox {
  margin-left: -$paper_show_author_list_item_margin;
}

.commentsBoxWrapper {
  margin-top: 35px;
}

.line {
  border-bottom: solid 1px $space_gray22;
  height: 1px;
  margin-top: 12px;
  margin-bottom: 10px;
}

.commentTitle {
  font-size: 18px;
  font-weight: 500;
  text-align: left;
  color: $black_navy1;

  span {
    display: inline-block;
    vertical-align: top;
  }
}

.commentCount {
  margin-left: 10px;
  color: $royal_blue1;
}

